syntax = "proto3";

package jimlambrt.any.v1;
option go_package = "github.com/jimlambrt/any_test;any_test";

message TestUser {
  uint32 id = 1;
  string name = 2;
  string phone_number = 3;
  string email = 4;
}

message TestCar {
  uint32 id = 1;
  string model = 2;
  int32 mpg = 3;
}

message TestRental {
  uint32 user_id = 1;
  uint32 car_id = 2;
}